<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_send"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/action_send"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_rotate"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="@string/action_rotate"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_martin1"
        android:orderInCategory="100"
        android:title="@string/action_martin1"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_martin2"
        android:orderInCategory="100"
        android:title="@string/action_martin2"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_pd180"
        android:orderInCategory="100"
        android:title="@string/action_pd180"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_scottie1"
        android:orderInCategory="100"
        android:title="@string/action_scottie1"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_scottie2"
        android:orderInCategory="100"
        android:title="@string/action_scottie2"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_scottiedx"
        android:orderInCategory="100"
        android:title="@string/action_scottiedx"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_robot36"
        android:orderInCategory="100"
        android:title="@string/action_robot36"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_robot72"
        android:orderInCategory="100"
        android:title="@string/action_robot72"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_wrasse"
        android:orderInCategory="100"
        android:title="@string/action_wrasse"
        app:showAsAction="never" />
</menu>
